syntax = "proto3";

option go_package = "./api";
package message_stream;

message StreamingData {
    string curr_data = 1;
}

service Stream {
    rpc SendData(StreamingData) returns (StreamingData) {}        
}